--- a/src/components/Checkbox/Checkbox.css
+++ b/src/components/Checkbox/Checkbox.css
@@ -148,3 +148,28 @@
 .preview-hidden {
   visibility: hidden;
 }
+
+.uninstall-mod {
+  display: flex;
+  width: 20px;
+  height: 30px;
+}
+
+.uninstall-mod button {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.uninstall-mod button svg {
+  width: 100%;
+  height: 100%;
+}
+
+.uninstall-mod button svg path {
+  width: 100%;
+  height: 100%;
+}
+
