--- a/src/components/Checkbox/Checkbox.css
+++ b/src/components/Checkbox/Checkbox.css
@@ -149,27 +149,18 @@
   visibility: hidden;
 }
 
-.uninstall-mod {
-  display: flex;
-  width: 20px;
-  height: 30px;
-}
-
-.uninstall-mod button {
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
+.checkbox-delete-button {
   border: none;
   outline: none;
+  background-color: transparent;
+  transition: .3s;
 }
 
-.uninstall-mod button svg {
-  width: 100%;
-  height: 100%;
+.checkbox-delete-button:hover {
+  opacity: .7;
 }
 
-.uninstall-mod button svg path {
-  width: 100%;
-  height: 100%;
+.checkbox-delete-button svg {
+  width: 15px;
+  fill: #6E736A;
 }
-
