--- a/src/components/PrimaryButton/PrimaryButton.css
+++ b/src/components/PrimaryButton/PrimaryButton.css
@@ -12,3 +12,17 @@
 .primary-button:hover {
   opacity: .7;
 }
+
+.primary-button svg {
+  fill: #EEEEEE;
+  height: 30px;
+}
+
+@media only screen and (max-width: 800px) {
+  .primary-button {
+    border-radius: 10px;
+    padding: 15px;
+    width: 10vw;
+    min-width: 0;
+  }
+}
